Bug 853362 - [Leo][tara] Camera switch icon and flash icon are covered by filmstrip

--- a/apps/camera/style/camera.css
+++ b/apps/camera/style/camera.css
@@ -290,11 +290,13 @@ html, body {
 }
 
 #toggle-camera {
-  right: 2rem;
+  right: 1rem;
+  top: 2rem;
 }
 
 #toggle-flash {
-  left: 2rem;
+  left: 1rem;
+  top: 2rem;
 }
 
 #toggle-camera[data-mode=back]:after {
